no warning at task 2

--- a/homeworks/HW02/HW02.ipynb
+++ b/homeworks/HW02/HW02.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1250d553",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
     "                        labels=['<20', '20-29', '30-39', '40-49', '50-59', '60+'])\n",
     "\n",
     "print(\"СТАТИСТИКИ ПО ВОЗРАСТНЫМ ГРУППАМ:\")\n",
-    "age_group_stats = df.groupby('age_group').agg({\n",
+    "age_group_stats = df.groupby('age_group', observed=False).agg({\n",
     "    'purchases': ['mean', 'count'],\n",
     "    'revenue': ['mean', 'sum']\n",
     "}).round(2)\n",
